# incant

./: .gitignore  DESIGN.md  DIVERGENCES.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
.claude/skills/verify/: SKILL.md
alembic/: env.py
alembic/versions/: 67fb7465ee07_add_browser_sessions.py  a3f1c8e29b41_unique_api_key_prefix.py  b7d2e6f4a1c9_unique_review_draft_reviewer.py  da3e34b2b8fe_baseline_schema.py
incant/: __init__.py  cli.py  config.py  db.py  models.py  seed.py  service.py
incant/core/: __init__.py  clauses.py  errors.py  evaluate.py  model.py  parse.py  render.py  rollout.py  variables.py
incant/gitstore/: __init__.py  content.py  store.py  validation.py
incant/registry/: __init__.py  reconcile.py  service.py
incant/server/: __init__.py  app.py  auth.py  deps.py  metrics.py  mgmt.py  schemas.py  serving.py  sessions.py  throttle.py
incant/server/mgmt/: __init__.py  admin.py  audit.py  drafts.py  helpers.py  prompts.py  targeting.py
incant/targeting/: __init__.py  audit.py  service.py  snapshot.py
incant/ui/: app.css  app.js  index.html
incant/ui/js/: api.js  describe.js  main.js  shell.js  util.js
incant/ui/js/screens/: compare.js  draft.js  library.js  misc.js  prompt.js  publish.js  targeting.js
tests/: conftest.py  test_auth_miss.py  test_batch_ops.py  test_clauses.py  test_concurrency.py  test_ensure_schema.py  test_env_admin.py  test_evaluate.py  test_gitstore.py  test_hotpath.py  test_integration.py  test_overview_scale.py  test_pointer_integrity.py  test_reconcile.py  test_render.py  test_reviews.py  test_rollout.py  test_rule_authz.py  test_server.py  test_ux_endpoints.py  test_variables.py  test_warm.py
tests/browser/: conftest.py  test_browser.py
