[project]
name = "incant"
version = "0.1.0"
description = "A prompt management platform — git for content, Jinja2 for rendering, flag-based targeting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "prometheus-client>=0.21",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[project.scripts]
incant = "incant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["incant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
