[project]
name = "incant"
version = "0.1.0"
description = "A prompt management platform — git for content, Jinja2 for rendering, flag-based targeting."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "prometheus-client>=0.21",
    "python-multipart>=0.0.12",
    "alembic>=1.18.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]
# Opt-in browser end-to-end suite (tests/browser). Not installed by default: run with
# `uv run --group browser ...`. Drives the real UI with Playwright's sync API (no
# pytest-playwright — the fixtures call sync_playwright() directly). pytest is repeated
# so the group is self-contained when installed on its own.
browser = [
    "playwright>=1.40",
    "pytest>=8.3",
]

[project.scripts]
incant = "incant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["incant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Starlette's TestClient still rides on httpx and warns it will prefer a future
    # `httpx2`. That package is not yet a real, pinnable dependency, and replacing the
    # whole test transport is disproportionate to a deprecation notice — so silence just
    # this one message (matched narrowly, not the whole StarletteDeprecationWarning /
    # UserWarning category) until an upgrade path actually exists.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]
